// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Builtin resources, STDIO should read meta resources, patternfly-components-meta 1`] = `
{
  "mimeType": "text/markdown",
  "text": "# PatternFly Components Index Metadata
Use these parameters to filter the list of PatternFly components.

## Available Parameters

| Parameter | Valid Values | Description |
| :--- | :--- | :--- |
| \`category\` | \`accessibility\`, \`css\`, \`design-guidelines\`, \`development-guide\`, \`html\`, \`org-demos\`, \`overview\`, \`react\`, \`text\`, \`text-demos\`, \`text-deprecated\` | Filter by category |
| \`version\` | \`v5\`, \`v6\` | Filter by version |

## Available Patterns
- **Base View**: \`patternfly://components/index\`
- **Filtered View (version=...)**: \`patternfly://components/index?version=...\`
- **Filtered View (version=...&category=...)**: \`patternfly://components/index?version=...&category=...\`",
  "uri": "patternfly://components/meta",
}
`;

exports[`Builtin resources, STDIO should read meta resources, patternfly-docs-meta 1`] = `
{
  "mimeType": "text/markdown",
  "text": "# PatternFly Documentation Index Metadata
Use these parameters to filter the documentation index.

## Available Parameters

| Parameter | Valid Values | Description |
| :--- | :--- | :--- |
| \`category\` | \`about\`, \`about-rapid-prototyping\`, \`accessibility\`, \`analytics\`, \`chat-bot\`, \`css\`, \`customizing%20messages\`, \`dark-theme-handbook\`, \`demo\`, \`demo-demos\`, \`design-guidelines\`, \`design-tokens\`, \`development-guide\`, \`development-guidelines\`, \`enhancing-existing-projects\`, \`general\`, \`glass-mode-handbook\`, \`grammar\`, \`high-contrast-handbook\`, \`html\`, \`new-prototypes\`, \`org-demos\`, \`overview\`, \`react\`, \`release-notes\`, \`text\`, \`text-demos\`, \`text-deprecated\`, \`tree-shaking\`, \`upgrade-guide\`, \`writing-guidelines\`, \`writing-guides\` | Filter by category |
| \`collection\` | \`patternfly-api\`, \`patternfly-component-schemas\`, \`patternfly-docs\` | Filter by collection |
| \`section\` | \`accessibility\`, \`ai\`, \`charts\`, \`components\`, \`content-design\`, \`developer-guides\`, \`extensions\`, \`foundations-and-styles\`, \`get-help\`, \`get-involved\`, \`get-started\`, \`layouts\`, \`patterns\`, \`releases\`, \`upgrade\` | Filter by section |
| \`version\` | \`v4\`, \`v5\`, \`v6\` | Filter by version |

## Available Patterns
- **Base View**: \`patternfly://docs/index\`
- **Filtered View (version=...)**: \`patternfly://docs/index?version=...\`
- **Filtered View (category=...)**: \`patternfly://docs/index?category=...\`
- **Filtered View (version=...&category=...)**: \`patternfly://docs/index?version=...&category=...\`
- **Filtered View (section=...)**: \`patternfly://docs/index?section=...\`
- **Filtered View (version=...&section=...)**: \`patternfly://docs/index?version=...&section=...\`
- **Filtered View (category=...&section=...)**: \`patternfly://docs/index?category=...&section=...\`
- **Filtered View (version=...&category=...&section=...)**: \`patternfly://docs/index?version=...&category=...&section=...\`
- **Filtered View (collection=...)**: \`patternfly://docs/index?collection=...\`
- **Filtered View (version=...&collection=...)**: \`patternfly://docs/index?version=...&collection=...\`
- **Filtered View (category=...&collection=...)**: \`patternfly://docs/index?category=...&collection=...\`
- **Filtered View (version=...&category=...&collection=...)**: \`patternfly://docs/index?version=...&category=...&collection=...\`
- **Filtered View (section=...&collection=...)**: \`patternfly://docs/index?section=...&collection=...\`
- **Filtered View (version=...&section=...&collection=...)**: \`patternfly://docs/index?version=...&section=...&collection=...\`
- **Filtered View (category=...&section=...&collection=...)**: \`patternfly://docs/index?category=...&section=...&collection=...\`
- **Filtered View (version=...&category=...&section=...&collection=...)**: \`patternfly://docs/index?version=...&category=...&section=...&collection=...\`",
  "uri": "patternfly://docs/meta",
}
`;

exports[`Builtin resources, STDIO should read meta resources, patternfly-schemas-meta 1`] = `
{
  "mimeType": "text/markdown",
  "text": "# PatternFly Component Schemas Index Metadata
Use these parameters to filter the list of PatternFly component schemas.

## Available Parameters

| Parameter | Valid Values | Description |
| :--- | :--- | :--- |
| \`category\` | \`accessibility\`, \`css\`, \`design-guidelines\`, \`development-guide\`, \`html\`, \`org-demos\`, \`overview\`, \`react\`, \`text\`, \`text-demos\`, \`text-deprecated\` | Filter by category |
| \`version\` | \`v5\`, \`v6\` | Filter by version |

## Available Patterns
- **Base View**: \`patternfly://schemas/index\`
- **Filtered View (version=...)**: \`patternfly://schemas/index?version=...\`
- **Filtered View (version=...&category=...)**: \`patternfly://schemas/index?version=...&category=...\`",
  "uri": "patternfly://schemas/meta",
}
`;

exports[`Builtin tools, STDIO should concatenate headers and separator with two remote files 1`] = `
"<!-- mcp:provenance id="http://127.0.0.1:5010/notARealPath/AboutModal.md" -->
# Content for http://127.0.0.1:5010/notARealPath/AboutModal.md
Source: http://127.0.0.1:5010/notARealPath/AboutModal.md

# Test Document

This is a test document for mocking remote HTTP requests.

---

<!-- mcp:provenance id="http://127.0.0.1:5010/notARealPath/README.md" -->
# Content for http://127.0.0.1:5010/notARealPath/README.md
Source: http://127.0.0.1:5010/notARealPath/README.md

# PatternFly Development Rules
            This is a generated offline fixture used by the MCP external URLs test.

            Essential rules and guidelines working with PatternFly applications.

            ## Quick Navigation

            ### 🚀 Setup & Environment
            - **Setup Rules** - Project initialization requirements
            - **Quick Start** - Essential setup steps
            - **Environment Rules** - Development configuration"
`;

exports[`Builtin tools, STDIO should expose expected tools and stable shape 1`] = `
{
  "toolNames": [
    "searchPatternFlyDocs",
    "usePatternFlyDocs",
  ],
}
`;

exports[`Builtin tools, STDIO should return expected markdown structure for search results: markdown 1`] = `
"# Search results for "button". Showing 3 exact matches.
1. **button**:
  "usePatternFlyDocs" resource parameter "name" and "URLs"
    - **Name**: button
    - **URLs**:
      - [Button - (v6) - Design Guidelines for the button component.](https://raw.githubusercontent.com/patternfly/patternfly-org/957756128e8ddfc4be5db49e72312a2c43b9d220/packages/documentation-site/patternfly-docs/content/components/button/button.md)
      - [Button - (v6) - Accessibility for the button component.](https://raw.githubusercontent.com/patternfly/patternfly-org/957756128e8ddfc4be5db49e72312a2c43b9d220/packages/documentation-site/patternfly-docs/content/components/accessibility/button/button.md)
      - [Button - (v6) - Examples for the button component.](https://raw.githubusercontent.com/patternfly/patternfly-react/6f2385bbcc03de22a7ae8be506481e1b4d653200/packages/react-core/src/components/Button/examples/Button.md)
      - [Button CSS - (v6) - PatternFly variables and tokens for Button CSS.](https://api.patternfly.org/api/v6/components/button/css)
      - [Button ARIA Disabled - (v6) - PatternFly examples and demos for Button ARIA Disabled.](https://api.patternfly.org/api/v6/components/button/react/examples/ButtonAriaDisabled)
      - [Button Block - (v6) - PatternFly examples and demos for Button Block.](https://api.patternfly.org/api/v6/components/button/react/examples/ButtonBlock)
      - [Button Call To Action - (v6) - PatternFly examples and demos for Button Call To Action.](https://api.patternfly.org/api/v6/components/button/react/examples/ButtonCallToAction)
      - [Button Circle - (v6) - PatternFly examples and demos for Button Circle.](https://api.patternfly.org/api/v6/components/button/react/examples/ButtonCircle)
      - [Button Custom Component - (v6) - PatternFly examples and demos for Button Custom Component.](https://api.patternfly.org/api/v6/components/button/react/examples/ButtonCustomComponent)
      - [Button Disabled - (v6) - PatternFly examples and demos for Button Disabled.](https://api.patternfly.org/api/v6/components/button/react/examples/ButtonDisabled)
      - [Button Hamburger - (v6) - PatternFly examples and demos for Button Hamburger.](https://api.patternfly.org/api/v6/components/button/react/examples/ButtonHamburger)
      - [Button Inline Span Link - (v6) - PatternFly examples and demos for Button Inline Span Link.](https://api.patternfly.org/api/v6/components/button/react/examples/ButtonInlineSpanLink)
      - [Button Links - (v6) - PatternFly examples and demos for Button Links.](https://api.patternfly.org/api/v6/components/button/react/examples/ButtonLinks)
      - [Button Plain Has No Padding - (v6) - PatternFly examples and demos for Button Plain Has No Padding.](https://api.patternfly.org/api/v6/components/button/react/examples/ButtonPlainHasNoPadding)
      - [Button Progress - (v6) - PatternFly examples and demos for Button Progress.](https://api.patternfly.org/api/v6/components/button/react/examples/ButtonProgress)
      - [Button Settings - (v6) - PatternFly examples and demos for Button Settings.](https://api.patternfly.org/api/v6/components/button/react/examples/ButtonSettings)
      - [Button Small - (v6) - PatternFly examples and demos for Button Small.](https://api.patternfly.org/api/v6/components/button/react/examples/ButtonSmall)
      - [Button Stateful - (v6) - PatternFly examples and demos for Button Stateful.](https://api.patternfly.org/api/v6/components/button/react/examples/ButtonStateful)
      - [Button Variations - (v6) - PatternFly examples and demos for Button Variations.](https://api.patternfly.org/api/v6/components/button/react/examples/ButtonVariations)
      - [Button With Count - (v6) - PatternFly examples and demos for Button With Count.](https://api.patternfly.org/api/v6/components/button/react/examples/ButtonWithCount)
      - [Button - (v6) - There are certain cases where specific buttons must be used within your UI.](https://api.patternfly.org/api/v6/components/button/text)
    - **Resources**:
      - **URI**: patternfly://docs/button?version=v6
      - **JSON Schemas**: patternfly://schemas/button?version=v6

2. **extensionscomponentgroupsclosebutton**:
  "usePatternFlyDocs" resource parameter "name" and "URLs"
    - **Name**: extensionscomponentgroupsclosebutton
    - **URLs**:
      - [Component Groups Close Button - (v6) - The close button component provides a way for users to exit a modal, dialogue, or similar action. To further customize this component, you can also utilize all properties of the button component.](https://api.patternfly.org/api/v6/extensions/component-groups_close-button/react)
    - **Resources**:
      - **URI**: patternfly://docs/extensionscomponentgroupsclosebutton?version=v6

3. **extensionscomponentgroupsexternallinkbutton**:
  "usePatternFlyDocs" resource parameter "name" and "URLs"
    - **Name**: extensionscomponentgroupsexternallinkbutton
    - **URLs**:
      - [External Link Button Example - (v6) - PatternFly examples and demos for External Link Button Example.](https://api.patternfly.org/api/v6/extensions/component-groups_external-link-button/react/examples/ExternalLinkButtonExample)
      - [External Link Button Icon Props Example - (v6) - PatternFly examples and demos for External Link Button Icon Props Example.](https://api.patternfly.org/api/v6/extensions/component-groups_external-link-button/react/examples/ExternalLinkButtonIconPropsExample)
      - [External Link Button Inline Example - (v6) - PatternFly examples and demos for External Link Button Inline Example.](https://api.patternfly.org/api/v6/extensions/component-groups_external-link-button/react/examples/ExternalLinkButtonInlineExample)
    - **Resources**:
      - **URI**: patternfly://docs/extensionscomponentgroupsexternallinkbutton?version=v6



---


**Important**:
  - Use the "usePatternFlyDocs" tool with the above names and URLs to fetch resource content.
  - Use a search all ("*") to find all available resources."
`;

exports[`Logging should allow setting logging options, default 1`] = `[]`;

exports[`Logging should allow setting logging options, stderr 1`] = `
[
  "[INFO]: Server logging enabled.
",
  "[INFO]: Server stats enabled.
",
  "[INFO]: No external resources loaded.
",
  "[INFO]: No external tools loaded.
",
  "[INFO]: Registered collection: patternfly-docs
",
  "[INFO]: Registered collection: patternfly-component-schemas
",
  "[INFO]: Registered collection: patternfly-api
",
  "[INFO]: Registered collection: ai-handbook
",
  "[INFO]: Update collection: patternfly-api
",
  "[INFO]: Update collection: patternfly-component-schemas
",
  "[INFO]: Update collection: patternfly-docs
",
  "[INFO]: Update collection: ai-handbook
",
  "[INFO]: Registered resource: patternfly-context
",
  "[INFO]: Registered resource: patternfly-components-index-meta
",
  "[INFO]: Registered resource: patternfly-components-index
",
  "[INFO]: Registered resource: patternfly-docs-index-meta
",
  "[INFO]: Registered resource: patternfly-docs-index
",
  "[INFO]: Registered resource: patternfly-docs-template
",
  "[INFO]: Registered resource: patternfly-schemas-index-meta
",
  "[INFO]: Registered resource: patternfly-schemas-index
",
  "[INFO]: Registered resource: patternfly-schemas-template
",
  "[INFO]: Registered tool: usePatternFlyDocs
",
  "[INFO]: Registered tool: searchPatternFlyDocs
",
  "[INFO]: @patternfly/patternfly-mcp server running on stdio transport
",
]
`;

exports[`Logging should allow setting logging options, with experimental flag set 1`] = `[]`;

exports[`Logging should allow setting logging options, with log level filtering 1`] = `[]`;

exports[`Logging should allow setting logging options, with mcp protocol 1`] = `
[
  {
    "method": "notifications/message",
    "params": {
      "data": "@patternfly/patternfly-mcp server running on stdio transport",
      "level": "info",
      "logger": "@patternfly/patternfly-mcp",
    },
  },
]
`;

exports[`Tools should interact with a tool, echo basic tool 1`] = `
{
  "args": {
    "dolor": "sit amet",
    "lorem": "ipsum",
    "type": "echo",
  },
  "content": [
    {
      "text": "{"type":"echo","lorem":"ipsum","dolor":"sit amet"}",
      "type": "text",
    },
  ],
  "options": [
    "serverName",
    "serverVersion",
    "nodeMajor",
    "repoName",
  ],
}
`;

exports[`Tools should interact with a tool, echo create MCP tool 1`] = `
{
  "args": {
    "dolor": "sit amet",
    "lorem": "ipsum",
    "type": "echo",
  },
  "content": [
    {
      "text": "{"type":"echo","lorem":"ipsum","dolor":"sit amet"}",
      "type": "text",
    },
  ],
}
`;
